--- a/index.html
+++ b/index.html
@@ -47,13 +47,28 @@
         <div id="headerCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./imagenes/partidos/partido 1.png" class="d-block w-100" alt="Sudáfrica 2010">
+              <img src="./imagenes/partidos/partido1.png" class="d-block w-100" alt="Sudáfrica 2010">
             </div>
             <div class="carousel-item">
-              <img src="./imagenes/partidos/partido 2.png" class="d-block w-100" alt="España Campeón">
+              <img src="./imagenes/partidos/partido2.png" class="d-block w-100" alt="España Campeón">
             </div>
             <div class="carousel-item">
-              <img src="./imagenes/partidos/partido 3.png" class="d-block w-100" alt="Momentos del Mundial">
+              <img src="./imagenes/partidos/partido3.png" class="d-block w-100" alt="Momentos del Mundial">
+            </div>
+            <div class="carousel-item">
+              <img src="./imagenes/partidos/partido4.png" class="d-block w-100" alt="Momentos del Mundial">
+            </div>
+            <div class="carousel-item">
+              <img src="./imagenes/partidos/partido5.png" class="d-block w-100" alt="Momentos del Mundial">
+            </div>
+            <div class="carousel-item">
+              <img src="./imagenes/partidos/partido6.png" class="d-block w-100" alt="Momentos del Mundial">
+            </div>
+            <div class="carousel-item">
+              <img src="./imagenes/partidos/partido7.png" class="d-block w-100" alt="Momentos del Mundial">
+            </div>
+            <div class="carousel-item">
+              <img src="./imagenes/partidos/partido8.png" class="d-block w-100" alt="Momentos del Mundial">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#headerCarousel" data-bs-slide="prev">
