--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
 
   <section id="datos" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">DATOS</h2>
-      <p class="text-center">Estadísticas y datos del Mundial.</p>
+      <h2 class="text-center mb-4">STATS</h2>
+      <p class="text-center">Key statistics and data from the tournament.</p>
     </div>
   </section>
 
  <section id="selecciones" class="py-5 bg-light">
   <div class="container">     
-    <h2 class="text-center mb-4">SELECCIONES</h2>
+    <h2 class="text-center mb-4">National teams</h2>
 
     <div class="bg-white rounded-4 shadow p-4 mx-auto" style="max-width: 95%;">
       <p class="mb-0">
@@ -177,22 +177,22 @@
 
   <section id="noticias" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">NOTICIAS</h2>
-      <p class="text-center">Últimas noticias sobre el Mundial 2010.</p>
+      <h2 class="text-center mb-4">NEWS</h2>
+      <p class="text-center">Latest news from the 2010 World Cup.</p>
     </div>
   </section>
 
   <section id="historia" class="py-5 bg-light">
     <div class="container">
-      <h2 class="text-center mb-4">HISTORIA</h2>
-      <p class="text-center">Historia y curiosidades del Mundial.</p>
+      <h2 class="text-center mb-4">HISTORY</h2>
+      <p class="text-center">History and interesting facts from the World Cup.</p>
     </div>
   </section>
 
   <section id="fifa" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">FIFA+</h2>
-      <p class="text-center">Enlaces y contenido oficial de FIFA+.</p>
+      <p class="text-center">Official links and content from FIFA+</p>
     </div>
   </section>
 
