--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mundial 2010</title>
+  <link rel="icon" type="image" href="./imagenes/mascota.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="Mundial2010.css">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <script src="/Mundial2010/JSMUNDIAL.js" defer></script>
 </head>
 <body>
 
@@ -39,6 +43,7 @@
           <li class="nav-item"><a class="greylogo nav-link" href="#datos">Stats</a></li>
           <li class="nav-item"><a class="greylogo nav-link" href="#selecciones">National teams</a></li>
           <li class="nav-item"><a class="greylogo nav-link" href="#historia">History</a></li>
+          <li class="nav-item"><a class="greylogo nav-link" href="#pelota">Official ball</a></li>
           <li class="nav-item"><a class="greylogo nav-link" href="#fifa">FIFA+</a></li>
         </ul>
         
@@ -1005,11 +1010,91 @@
 </section>
 
   <section id="datos" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">STATS</h2>
-      <p class="text-center">Key statistics and data from the tournament.</p>
-    </div>
-  </section>
+    <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
+    <h2 class="text-center red mb-4">STATS</h2>
+
+    <div class="row g-4 justify-content-center">
+
+      <div class="col-lg-4 col-md-6">
+        <div class="bg-dark text-white card-goals rounded-4 shadow p-4 h-100">
+          <h4 class="text-center mb-3">GOALS</h4>
+          <ul class="list-unstyled text-center text-start ps-0">
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Thomas Muller (5)</li>
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> David Villa (5)</li>
+            <li><img src="https://flagcdn.com/w20/nl.png" alt="Netherlands flag" class="me-2"> Wesley Sneijder (5)</li>
+            <li><img src="https://flagcdn.com/w20/uy.png" alt="Uruguay flag" class="me-2"> Diego Forlan (5)</li>
+            <li><img src="https://flagcdn.com/w20/ar.png" alt="Argentina flag" class="me-2"> Gonzalo Higuain (4)</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="bg-dark text-white card-asists rounded-4 shadow p-4 h-100">
+          <h4 class="text-center mb-3">ASSISTS</h4>
+          <ul class="list-unstyled text-center text-start ps-0">
+            <li><img src="https://flagcdn.com/w20/br.png" alt="Brazil flag" class="me-2"> KAKA (3)</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Thomas Muller (3)</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Mesut Ozil (3)</li>
+            <li><img src="https://flagcdn.com/w20/nl.png" alt="Netherlands flag" class="me-2"> Dirk Kuyt (3)</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Bastian Schweinsteiger (3)</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="bg-dark text-white card-clean rounded-4 shadow p-4 h-100">
+          <h4 class="text-center mb-3">CLEAN SHEETS</h4>
+          <ul class="list-unstyled text-center text-start ps-0">
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> Iker Casillas (5)</li>
+            <li><img src="https://flagcdn.com/w20/pt.png" alt="Portugal flag" class="me-2"> Eduardo (3)</li>
+            <li><img src="https://flagcdn.com/w20/py.png" alt="Paraguay flag" class="me-2"> Justo Villar (3)</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Manuel Neuer (3)</li>
+            <li><img src="https://flagcdn.com/w20/uy.png" alt="Uruguay flag" class="me-2"> Fernando Muslera (3)</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="bg-dark text-white card-pases rounded-4 shadow p-4 h-100">
+          <h4 class="text-center mb-3">COMPLETED PASSES</h4>
+          <ul class="list-unstyled text-center text-start ps-0">
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> Xavi (669)</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Bastian Schweinsteiger (510)</li>
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> Sergio Busquets (501)</li>
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> Xabi Alonso (480)</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Philipp Lahm (471)</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="bg-dark text-white card-ga rounded-4 shadow p-4 h-100">
+          <h4 class="text-center mb-3">G+A</h4>
+          <ul class="list-unstyled text-center text-start ps-0">
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Thomas Muller (8)</li>
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> David Villa (6)</li>
+            <li><img src="https://flagcdn.com/w20/nl.png" alt="Netherlands flag" class="me-2"> Wesley Sneijder (6)</li>
+            <li><img src="https://flagcdn.com/w20/uy.png" alt="Uruguay flag" class="me-2"> Diego Forlan (6)</li>
+            <li><img src="https://flagcdn.com/w20/uy.png" alt="Uruguay flag" class="me-2"> Luis Suarez (5)</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="bg-dark text-white card-awards rounded-4 shadow p-4 h-100">
+          <h4 class="text-center mb-3">AWARDS</h4>
+          <ul class="list-unstyled text-center text-start ps-0">
+            <li><img src="https://flagcdn.com/w20/uy.png" alt="Uruguay flag" class="me-2"> Golden ball - Diego Forlan</li>
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" alt="Japan flag" class="me-2"> Golden glove - Iker Casillas</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Golden boot - Thomas Muller</li>
+            <li><img src="https://flagcdn.com/w20/de.png" alt="German flag" class="me-2"> Young player - Thomas Muller</li>
+            <li><img src="https://flagcdn.com/w20/es.png" alt="Spain flag" class="me-2"> Final MVP - Andres Iniesta</li>
+            </ul>
+        </div>
+      </div>
+
+    </div> </div>
+</section>
 
  <section id="selecciones" class="py-5 ">
   <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
@@ -1091,12 +1176,21 @@
 
     </div> </div> </section>
 
-  <section id="noticias" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">NEWS</h2>
-      <p class="text-center">Latest news from the 2010 World Cup.</p>
+<section id="pelota" class="py-5" style="height: 100vh;">
+  <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
+    <h2 class="text-center red mb-4">Official Ball</h2>
+    <p class="text-center red">Meet the <span class="fs-4 text-black">  Jabulani</span></p>
+
+    <div class="row justify-content-center">
+      <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+
+        <img src="./imagenes/JABULANI.png" alt="Balón Jabulani" 
+             class="imagen-balon img-fluid mt-3">
+
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="historia" class="py-5 ">
     <div class="container">
@@ -1130,7 +1224,7 @@
 
     <div class="col-lg-3 col-md-4 col-sm-6">
       <a href="https://www.plus.fifa.com/en/player/f3a01be7-04ec-4609-abc6-c14cd33e290a?catalogId=10dac8c1-e843-40e0-a940-51d8d39824ce&entryPoint=Default">
-      <img src="./imagenes/portadas/semifinal2.jpg" 
+      <img src="./imagenes/portadas/semifinal.jpg" 
            class="img-fluid rounded shadow-sm" alt="uruguay vs netherlands semi-final">
       </a>
     </div>
