--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="mb-0 fs-6">South Africa 2010</h1>
     </header>
 
-    <section>
+    <section id="header">
         <nav class="navbar navbar-expand-md flex-md-nowrap red-gradient p-4">
             <div class="container-fluid">
                 <a class="navbar-brand order-1 order-md-1" href="#">
