--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <section id="header">
+        <h2 class="visually-hidden">Main navigation section</h2>
         <nav class="navbar navbar-expand-md flex-md-nowrap red-gradient p-4">
             <div class="container-fluid">
                 <a class="navbar-brand order-1 order-md-1" href="#">
