--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         <li class="nav-item"><a class="greylogo nav-link" href="#clasificacion">Classification</a></li>
                         <li class="nav-item"><a class="greylogo nav-link" href="#datos">Stats</a></li>
                         <li class="nav-item"><a class="greylogo nav-link" href="#selecciones">National teams</a></li>
-                        <li class="nav-item"><a class="greylogo nav-link" href="#historia">History</a></li>
                         <li class="nav-item"><a class="greylogo nav-link" href="#pelota">Official ball</a></li>
+                        <li class="nav-item"><a class="greylogo nav-link" href="#historia">History</a></li>
                         <li class="nav-item"><a class="greylogo nav-link" href="#fifa">FIFA+</a></li>
                     </ul>
                 </div>
@@ -79,7 +79,7 @@
         </nav>
     </section>
 
-    <section id="partidos" class="py-5">
+    <section id="partidos" class="py-4">
         <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%"> <!-- Secció dels partits -->
             <h2 class="text-center red mb-4">MATCHES</h2>
             <div class="accordion" id="matchesAccordion"> <!-- Acordió de bootstrap per als diferents tipus de partits -->
@@ -245,7 +245,7 @@
         </div>
     </section>
 
-    <section id="clasificacion" class="py-5"> <!-- Seccio classificacio final -->
+    <section id="clasificacion" class="py-3"> <!-- Seccio classificacio final -->
         <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
             <h2 class="text-center red mb-4">CLASSIFICATION</h2>
             <div class="rojofondo shadow rounded-4 p-4 mx-auto" style="max-width: 99%;"> <!-- Taula classificacio final -->
@@ -298,7 +298,7 @@
         </div>
     </section>
 
-    <section id="datos" class="py-5"> <!-- Seccio estadistiques -->
+    <section id="datos" class="py-4"> <!-- Seccio estadistiques -->
         <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
             <h2 class="text-center red mb-4">STATS</h2> 
             <div class="row g-4 justify-content-center">
@@ -379,7 +379,7 @@
     </section>
 
     
-<section id="selecciones" class="py-5"> <!-- Seccio seleccions nacionals -->
+<section id="selecciones" class="py-4"> <!-- Seccio seleccions nacionals -->
         <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
             <h2 class="text-center red mb-4">NATIONAL TEAMS</h2>
             <div class="row g-4 justify-content-center"> <!-- Cards seleccions nacionals -->
@@ -454,7 +454,7 @@
         </div>
 </section>
 
-<section id="pelota" class="py-5" style="min-height: 100vh; display: flex; align-items: center; justify-content: center;"> <!-- Seccio bola oficial -->
+<section id="pelota" class="py-3" style="display: flex; align-items: center; justify-content: center;"> <!-- Seccio bola oficial -->
   <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
     <h2 class="text-center red mb-4">Official ball</h2>
     <p class="text-center red mb-5">
@@ -465,7 +465,7 @@
   </div>
 </section>
 
-<section id="historia" class="py-5"> <!-- Seccio historia mundial -->
+<section id="historia" class="py-4"> <!-- Seccio historia mundial -->
     <div class="container-fluid grey-gradient rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
             <h2 class="text-center red mb-4">HISTORY</h2>
             <p class="text-center text-black mb-5">Interesting facts and milestones from the tournament's legacy.</p>
@@ -489,7 +489,7 @@
     </div>
 </section>
 
-    <section id="fifa" class="py-5"> <!-- Seccio FIFA+ videos oficials -->
+    <section id="fifa" class="py-4"> <!-- Seccio FIFA+ videos oficials -->
         <div class="container-fluid fifa-blue rounded-4 shadow p-4 mx-auto" style="max-width: 96%;">
             <h2 class="text-center mb-4">
                 <img src="./imagenes/fifa+.png" alt="FIFA+ Logo" style="width: 20%; max-width: 120px;"> 
